--- a/style.css
+++ b/style.css
@@ -34,15 +34,12 @@ html, body {
     grid-template-rows: 60px repeat(10, 20px);
     gap: 10px;
 }
-.sidebar li:not(li:first-of-type):hover {
-    background-color: #0284c7;
-}
 li span, li div {
     display: inline-block;
     margin-right: 10px;
 }
 .mdi-view-dashboard {
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 ul li:first-of-type {
     font-weight: bolder;
@@ -53,15 +50,24 @@ header {
     padding: 20px;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 35px 3fr 1fr;
+    align-items: start;
     box-shadow: 0 4px 2px -2px #6b7280;
 }
 .hello {
     grid-column: 1 / 3;
 }
 
-input[type="seach"] {
-    background-color: #9ca3af;
+input[type="search"] {
+    border: white;
+    border-radius: 20px;
+    max-width: 400px;
+    height: auto;
+    padding: 5px;
+    background-color: #d1d5db;
+}
+.mdi-card-search {
+    margin-top: -5px;
 }
 .profile-bar {
     grid-column: 1 / 3;
