--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
 input[type="search"] {
     border: white;
     border-radius: 20px;
-    max-width: 400px;
+    max-width: 500px;
     height: auto;
     padding: 5px;
     background-color: #d1d5db;
@@ -70,10 +70,10 @@ input[type="search"] {
     margin-top: -5px;
 }
 .profile-bar {
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     width: 100%;
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr 1.5fr;
 }
 .bar {
     display: flex;
@@ -82,8 +82,11 @@ input[type="search"] {
     grid-column: 3 / 4;
 }
 .bar button {
+    border: none;
+    color: white;
+    background-color: #0ea5e9;
     border-radius: 20px;
-    padding: 10px 20px;
+    padding: 10px 30px;
 }
 .profile {
     display: flex;
