--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ header {
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 35px 3fr 1fr;
     align-items: start;
-    box-shadow: 0 4px 2px -2px #6b7280;
 }
 .hello {
     grid-column: 1 / 3;
@@ -95,14 +94,74 @@ input[type="search"] {
 .profile * {
     display: inline-block;
 }
-.mdi-face-man, .mdi-36px {
-    vertical-align: top;
-}
 .profile-pic {
     display: grid;
     grid-template-columns: 1fr 6fr;
 }
 
+/* main section */
+
+main {
+    padding: 20px;
+    box-shadow: 0 7px 6px -6px #4b5563 inset;
+    background-color: #d1d5db;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+
+    display: grid;
+    gap: 20px;
+    grid-template: 25px 1fr / 4fr 1fr;
+}
+.main-h {
+    align-self: end;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: 180px;
+    grid-auto-rows: 180px;
+    gap: 20px;
+
+}
+.cards {
+    display: inline-block;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 10px 0 #f59e0b inset;
+}
+.cards div {
+    text-align: end;
+}
+
+/* main-announcement section */
+
+.announcement {
+    display: grid;
+    grid-template-rows: 4fr 55px 2fr;
+}
+
+.events {
+    padding: 5px 20px 20px;
+    background-color: white;
+    border-radius: 5px;
+}
+.events h3 {
+    padding-top: 15px;
+}
+.events p {
+    padding-bottom: 15px;
+}
+.people {
+    background-color: white;
+    border-radius: 5px;
+    padding: 20px;
+}
+.people * {
+    display: inline-block;
+}
 
 
 
